--- a/IDmap/vignettes/annoprobe.Rmd
+++ b/IDmap/vignettes/annoprobe.Rmd
@@ -1,18 +1,18 @@
 ---
-title: "AnnoProbe : An R/Bioconductor package for probe annotating"
+title: "AnnoProbe : An R package for probe annotating"
 author: "Yujia Xiang & Jianming Zeng"
 date: "`r Sys.Date()`"
-#bibliography: AnnoProbe.bib
-#biblio-style: apalike
-output:
+output: 
   prettydoc::html_pretty:
     toc: true
     theme: cayman # cayman, hpstr, leonids, tactile
     highlight: github
   pdf_document:
     toc: true
-vignette: |
-  %\usepackage[utf8]{inputenc} %\VignetteEncoding{UTF-8} %\VignetteIndexEntry{AnnoProbe : An R/Bioconductor package for probe annotating} %\VignetteEngine{knitr::rmarkdown}
+vignette: >
+  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 ```{r setup, include = FALSE}
@@ -153,4 +153,5 @@ AnnoProbe probe annotaion data will be updated per three months.
 
 ## 8. Help
 If you have questions/issues, please visit AnnoProbe help homepage first. Your problems are mostly documented. If you think you found a bug, please follow the guide and provide a reproducible example to be posted on github issue tracker. For questions,  please post to Bioconductor support site and tag your post with AnnoProbe or connect Email : XXXX DOT XXX .
+
 
